--- a/demos/1/styles.css
+++ b/demos/1/styles.css
@@ -25,6 +25,7 @@ body {
     margin:0 2px;
     border-radius:5px;
     font-size:0px;
+    cursor:pointer;
   }
   .currentDots .current span{
     display:inline-block;
